crates/analyzer/tests/snapshots/errors__invalid_var_declaration_2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: invalid declaration
  ┌─ compile_errors/invalid_var_declaration_2.fe:3:13
  │
3 │         let (x, y): (u256,) = (1,)
  │             ^^^^^^
  │
  = Tuple declaration has 2 items but the specified tuple type has 1 item


